--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "src/styles.less"
             ],
-            "scripts": [],
+              "./node_modules/winwheeljs/dist/Winwheel.min.js",
             "es5BrowserSupport": true
           },
           "configurations": {
