add TweenMax javascript from greensock project for wheel animation

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.less"
             ],
+            "scripts": [
               "./node_modules/winwheeljs/dist/Winwheel.min.js",
+              "./src/assets/js/TweenMax.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
